<resources>
    <string name="app_name">SebatMedikal</string>

    <string name="hint_username">Kullanıcı Adı</string>
    <string name="hint_password">Şifre</string>
    <string name="login">Giriş</string>
    <string name="empty_username">Lütfen kullanıcı adınızı giriniz</string>
    <string name="empty_password">Lütfen şifrenizi giriniz</string>
    <string name="invalid_password">Giriş bilgileri hatalı</string>

    <!--User Account-->
    <string name="userName">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="firstName">Ad</string>
    <string name="lastName">Soyad</string>
    <string name="email">Email</string>
    <string name="userType">Kullanıcı Tipi</string>

    <!--Base-->
    <string name="pleaseWait">Lütfen Bekleyiniz</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="save">Kaydet</string>
    <string name="delete">Sil</string>
    <string name="update">Güncelle</string>

    <string name="pleaseInputPrice">Lütfen ürün fiyatını giriniz</string>
    <string name="pleaseInputProductName">Lütfen ürün ismini giriniz</string>

    <!--server information-->
    <string name="serverURL">http://192.168.1.107:8080</string>
    <!--<string name="serverURL">http://www.byypipo.com:8080</string>-->
    <string name="serviceTagUser">/usersRest</string>
    <string name="serviceTagRole">/rolesRest</string>
    <string name="serviceTagProduct">/productsRest</string>
    <string name="serviceTagOperation">/operationsRest</string>
    <string name="serviceTagOperationType">/operationTypesRest</string>
    <string name="serviceTagBrand">/brandsRest</string>
    <string name="serverUnreachable">Server kullanılabilir durumda değil</string>
    <string name="userLogout">Kullanıcı çevrimdışı</string>

    <string name="createOperationURL">http://192.168.1.107:8080/productsRest/%1$d/operation/%2$d</string>

    <!--Remote config-->
    <string name="userNotFound">Kullanıcı bulunamadı</string>
    <string name="usersNotFound">Kullanıcılar bulunamadı</string>
    <string name="userExist">Kullanıcı zaten var</string>
    <string name="createdNotFound">Oluşturan kişi bulunamadı</string>
    <string name="brandNotFound">Marka bulunamadı</string>
    <string name="brandsNotFound">Markalar bulunamadı</string>
    <string name="brandExist">Marka zaten var</string>
    <string name="productNotFound">Ürün bulunamadı</string>
    <string name="productsNotFound">Ürünler bulunamadı</string>
    <string name="productExist">Ürün zaten var</string>
    <string name="operationNotFound">İşlem bulunamadı</string>
    <string name="operationsNotFound">İşlemler bulunamadı</string>
    <string name="operationTypeNotFound">İşlem tipi bulunamadı</string>
    <string name="operationTypesNotFound">İşlem tipleri bulunamadı</string>
    <string name="roleNotFound">Kullanıcı tipi bulunamadı</string>
    <string name="rolesNotFound">Kullanıcı tipleri bulunamadı</string>
    <string name="operationCountGt0">İşlem sayısı 0 dan büyük olmalıdır</string>
    <string name="insufficientStock">İşlem için stok yetersiz</string>

    <!--Tittles-->
    <string name="title_activity_main">AnaSayfa</string>
    <string name="title_activity_products">Ürünler</string>
    <string name="title_activity_operations">İşlemler</string>
    <string name="title_activity_account_settings">Hesap Ayarları</string>
    <string name="title_activity_users">Kullanıcılar</string>
    <string name="title_activity_brands">Markalar</string>
    <string name="title_activity_settings">Ayarlar</string>
    <string name="title_activity_notifications">Bildirimler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ayarlar</string>

    <!--menu-->
    <string name="operationsActivity">İşlemler</string>
    <string name="products">Ürünler</string>
    <string name="myAccount">Hesabım</string>
    <string name="accountSettings">Hesap Ayarları</string>
    <string name="brands">Markalar</string>
    <string name="messages">Mesajlar</string>
    <string name="users">Kullanıcılar</string>
    <string name="exit">Çıkış</string>

    <!--users-->
    <string name="newUser">Yeni Kullanıcı</string>
    <string name="roleAdmin">1</string>
    <string name="roleUser">2</string>
    <!--brands-->
    <string name="newBrand">Yeni Marka</string>
    <string name="createdBy">Oluşturan</string>
    <string name="gotoProduts">Ürünleri gör</string>
    <string name="productTypeCount">Ürün Sayısı</string>
    <string name="unknown">Bilinmiyor</string>


    <!--navigation var-->
    <string name="unknownUser">Bilinmeyen Kullanıcı</string>
    <string name="unknownRole">Bilinmeyen Tip</string>

    <!--layout_products_product-->
    <string name="productName">Ürün adı</string>
    <string name="price">Fiyat</string>
    <string name="totalPrice">Toplam Fiyat</string>
    <string name="brand">Marka</string>
    <string name="brandName">Marka Adı</string>
    <string name="note">Not</string>
    <string name="stock">Stok</string>
    <string name="purchase">Alış</string>
    <string name="newOperation">Yeni İşlem</string>
    <string name="sale">Satış</string>
    <string name="title_activity_test_tab">TestTab</string>
    <string name="currency">TL</string>
    <string name="defaultPrice">0 TL</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="newProduct">Yeni Ürün</string>
    <string name="barcod">Barkod</string>

    <!--operation_details-->
    <string name="operation_note">İşlem notu</string>
    <string name="operation_type">İşlem Tipi</string>
    <string name="operation_count">İşlem Sayısı</string>
    <string name="operation_createdBy">İşlemi Yapan</string>

    <!--operation_types-->
    <string name="operation_type_prompt">Lütfen İşlem Tipini Seçiniz</string>
    <string name="host">Sunucu Ip</string>
    <string name="settingsFormat">Varsayılan Ayarlar</string>

    <!--operation_types-->
    <string name="notifications">Bildirimler(Hazır Değil)</string>
    <string name="on">Açık</string>
    <string name="off">Kapalı</string>


    <string name="more">Daha fazla</string>

    <string-array name="operationtype_array">
        <item>Alım</item>
        <item>Satım</item>
    </string-array>

    <string-array name="role_array">
        <item>User</item>
        <item>Admin</item>
    </string-array>

    <!--FCM-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="SERVER_ONLINE">Sunucu açıldı</string>
    <string name="NEW_OPERATION">Yeni işlem</string>
    <string name="NEW_OPERATION_BY">%1$s tarafından %2$s işlemi yapıldı</string>
    <string name="LOGIN">%1$s çevrimiçi</string>
    <string name="LOGOUT">%1$s çevrimdışı</string>

    <!--<string name="toggle_turn_off">Kapalı</string>-->
    <!--<string name="toggle_turn_on">Açık</string>-->

    <!--camera-->
    <!--<string name="capture">Çek</string>-->
    <string name="pleaseSelectImageSource">Lütfen resim kaynağını seçiniz</string>
    <string name="imageSource">Resim kaynağı</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="imagePermission">Resim ekleme özelliği</string>
    <string name="onlyAdmin">yalnızca ADMIN kullanıcıları tarafından kullanılabilir</string>
</resources>
