<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/operations"
            android:title="@string/operationsActivity" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/products"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_brands"
            android:icon="@drawable/brands"
            android:title="@string/brands" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/users"
            android:title="@string/users" />
    </group>

    <item android:title="@string/myAccount">
        <menu
            android:checkableBehavior="single"
            android:icon="@drawable/myaccount">
            <item
                android:id="@+id/nav_accountSettings"
                android:icon="@drawable/settings"
                android:title="@string/accountSettings" />
            <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/message"
                android:title="@string/messages" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
