<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_products_product_newoperation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/layout_products_product_newoperation_image"
            android:layout_width="@dimen/image_square"
            android:layout_height="@dimen/image_square"
            android:src="@drawable/medical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/layout_products_product_newoperation_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/productName" />

        <Spinner
            android:id="@+id/layout_products_product_newoperation_operationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/operationtype_array"
            android:prompt="@string/operation_type_prompt"></Spinner>
        <!--android:entryValues="@array/listValues"></Spinner>-->

        <EditText
            android:id="@+id/layout_products_product_newoperation_operationcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operation_count"
            android:inputType="number" />

        <EditText
            android:id="@+id/layout_products_product_newoperation_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:inputType="text" />

        <TextView
            android:id="@+id/layout_products_product_newoperation_totalprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/defaultPrice" />

        <Button
            android:id="@+id/layout_products_product_newoperation_saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/save" />
    </LinearLayout>


</LinearLayout>
