<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_product_new_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/layout_product_new_product_image"
            android:layout_width="@dimen/little_image_square"
            android:layout_height="@dimen/little_image_square"
            android:src="@drawable/medical" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/layout_product_new_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/layout_product_new_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/layout_product_new_product_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/layout_product_new_product_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/layout_product_new_product_barcod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barcod" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/layout_product_new_product_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAlignment="center" />

</LinearLayout>
