<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_operation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/layout_operation_image"
            android:layout_width="@dimen/little_image_square"
            android:layout_height="@dimen/little_image_square"
            android:src="@drawable/medical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_top">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/productName"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_productName"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/brand"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_brand"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/operation_note"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_note"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/operation_type"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_type"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/operation_count"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_count"
                    android:layout_width="match_parent" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/operation_createdBy"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_operation_createdBy"
                    android:layout_width="match_parent" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
