<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_brands_brand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/layout_brands_brand_image"
            android:layout_width="@dimen/little_image_square"
            android:layout_height="@dimen/little_image_square"
            android:src="@drawable/medical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow>

                <TextView
                    android:layout_width="165dp"
                    android:fontFamily="serif"
                    android:text="@string/brandName"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_brands_brand_brandName"
                    android:layout_width="165dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="165dp"
                    android:fontFamily="serif"
                    android:text="@string/note"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_brands_brand_note"
                    android:layout_width="165dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="165dp"
                    android:fontFamily="serif"
                    android:text="@string/createdBy"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_brands_brand_createdBy"
                    android:layout_width="165dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="165dp"
                    android:fontFamily="serif"
                    android:text="@string/productTypeCount"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_brands_brand_productTypeCount"
                    android:layout_width="165dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/layout_brands_brand_gotoproduct"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/gotoProduts" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
