<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_account_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/layout_account_settings_image"
            android:layout_width="@dimen/little_image_square"
            android:layout_height="@dimen/little_image_square"
            android:src="@drawable/user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_top">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/userName"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_account_settings_userNameTW"
                    android:layout_width="165dp" />

                <EditText
                    android:id="@+id/layout_account_settings_userNameET"
                    android:layout_width="165dp"
                    android:visibility="gone" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/password"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_account_settings_passwordTW"
                    android:layout_width="165dp"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/layout_account_settings_passwordET"
                    android:layout_width="165dp"
                    android:inputType="textPassword"
                    android:visibility="gone" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/firstName"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_account_settings_firstNameTW"
                    android:layout_width="165dp" />

                <EditText
                    android:id="@+id/layout_account_settings_firstNameET"
                    android:layout_width="165dp"
                    android:visibility="gone" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/lastName"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_account_settings_lastNameTW"
                    android:layout_width="165dp" />

                <EditText
                    android:id="@+id/layout_account_settings_lastNameET"
                    android:layout_width="165dp"
                    android:visibility="gone" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <TextView
                    android:layout_width="@dimen/table_left"
                    android:fontFamily="serif"
                    android:text="@string/email"
                    android:textSize="50px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/layout_account_settings_emailTW"
                    android:layout_width="165dp" />

                <EditText
                    android:id="@+id/layout_account_settings_emailET"
                    android:inputType="textEmailAddress"
                    android:layout_width="165dp"
                    android:visibility="gone" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/table_row_top">

                <Button
                    android:id="@+id/layout_account_settings_save"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textAlignment="center" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
